Fix gap below Announcements card in narrow view

--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,7 @@ li > a {
   background-color: var(--color-light);
 
   display: grid;
-  grid-template: auto auto / 3fr minmax(200px, 1fr);
+  grid-template: auto 1fr / 3fr minmax(200px, 1fr);
   gap: var(--gap-small);
   padding: var(--gap-small);
 }
